--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "npm run build && ava",
     "lint": "eslint 'src/**/*.ts' 'scripts/**/*.{js,mjs}' 'types/*.ts'",
     "lint:fix": "npm run lint -- --fix",
-    "prepare": "npm run clean && npm run lint && npm run build && npm run build:types && npm run test"
+    "prepare": "npm run clean && npm run lint && npm run build && npm run build:types"
   },
   "repository": {
     "type": "git",
